# OS-and-Networking

./: Makefile  README.md  monitor.cpp  reader.cpp  shm.cpp  trace.py  trace256.py  trace_rmw.py  trace_shm.py  writer.cpp
2025:10:11/: writer.cpp
2025:10:28/ros2_ws/src/ros2_shm_demo/src/: subscriber.cpp
FastDDS_shm/: HelloMsg.idl.cpp  HelloMsg_idl.hpp  HelloMsg_idlCdrAux.hpp  HelloMsg_idlCdrAux.ipp  HelloMsg_idlPubSubTypes.cxx  HelloMsg_idlPubSubTypes.hpp  HelloMsg_idlTypeObjectSupport.cxx  HelloMsg_idlTypeObjectSupport.hpp  Makefile.txt  publish  publisher  publisher.cpp  subscribe  subscriber  subscriber.cpp  trace_shm.py
ros2_ws/src/ros2_shm_demo/: CMakeLists.txt  package.xml  trace.py
ros2_ws/src/ros2_shm_demo/config/: empty_profiles.xml  shm_profiles.xml
ros2_ws/src/ros2_shm_demo/src/: publisher.cpp  subscriber.cpp
