<?xml version="1.0"?>
<package format="3">
  <name>ros2_shm_demo</name>
  <version>0.1.0</version>
  <description>ROS 2 Fast DDS shared memory demo</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


